<resources>
    <string name="app_name">יבנה - תמרורים</string>
    <string name="app_name_help">עזרה</string>
    <string name="app_name_test">בוחן</string>
    <string name="app_name_details">פרטי תמרור</string>
    <string name="app_name_catalog">קטלוג תמרורים</string>
    <string name="app_name_history">היסטורית מבחנים</string>
    <string name="app_name_records">שיאי מבחנים</string>

    <string name="approve_message">אשר</string>
    <string name="submit_test_button">הגש</string>

    <string name="select_everything">כל הקטגוריות</string>
    <string name="search_sign_filter_text_catalog_hint">חפש לפי מספר התמרור או חלק ממאפייניו</string>
    <string name="empty_element_signs_catalog_text">לא נמצאו תמרורים</string>

    <string name="test_user_name_edit_hint">שם הנבחן/ת</string>

    <string name="dropdown_image_down_arrow">חץ לפתיחה</string>

    <string name="test_question_image_description">תמונה של תמרור</string>
    <string name="test_question_question_description">. מה פירוש התמרור?</string>

    <string name="history_tests_user_label">משתמש</string>
    <string name="history_tests_time_label">זמן</string>
    <string name="history_tests_date_label">תאריך</string>
    <string name="history_tests_grade_label">ציון</string>

    <string name="history_tests_empty">אין מבחנים להציג</string>

    <string name="history_tests_confirm_delete">האם אתם בטוחים שברצונכם למחוק את המבחן מהתאריך</string>
    <string name="history_tests_confirm_delete_positive">כן</string>
    <string name="history_tests_confirm_delete_negative">בטל</string>

    <string name="home_help">עזרה והוראות</string>
    <string name="home_history">היסטוריית מבחנים</string>
    <string name="home_highscore">שיאים</string>
    <string name="home_test">בוחן תמרורים</string>
    <string name="home_catalog">קטלוג תמרורים</string>
    <string name="catalog_image">תמונה של תמרור</string>

    <string name="sign_details_label_id">סמל התמרור:</string>
    <string name="sign_details_label_category">קטגוריה:</string>
    <string name="sign_details_label_group">קבוצה:</string>
    <string name="sign_details_label_meaning">פירוש:</string>
    <string name="sign_details_label_purpose">משמעות:</string>
    <string name="sign_details_label_power">כוחו יפה:</string>

    <string name="help_goal_title">מטרת האפליקצייה</string>
    <string name="help_goal">
        מטרת היישומון הוא לאפשר למידה קלה לקראת מבחני התיאוריה בעזרת לימוד תמרורים.
        באפליקצייה כמה חלקים שמטרתם להכין אתכם בצורה המיטבית למבחני התיאוריה.
    </string>
    <string name="help_functions_title">חלקי האפליקצייה</string>
    <string name="help_functions">
        האפליקצייה מורכבת ממספר חלקים: קטלוג, מבחן ונתונים.
        לכל אחד מהחלקים יש מטרה מיוחדת והוא כאן כדי לסייע לכם להתכונן.
    </string>
    <string name="help_home_title">דף הבית</string>
    <string name="help_home">
        על מנת להגיע לדף הבית, פתחו את האפליקצייה או לחצו על כפתור החזרה עד שתגיעו למסך ועליו חמישה כפתורים צבעוניים.
        כל כפתור יוביל אתכם לחלק שונה של האפליקצייה
    </string>
    <string name="help_help_title">עזרה</string>
    <string name="help_help">
        בכל שלב במהלך השימוש באפליקצייה, אתם מוזמנים לחזור לדף העזרה כדי לקבל את כל המידע שאתם צריכים על האפליקצייה.
        בסוף ההסבר יש סרטון קצר שמטרתו לשעשע אתכם בלבד.
    </string>
    <string name="help_catalog_title">קטלוג תמרורים</string>
    <string name="help_catalog">
        קטלוג התמרורים הוא החלק המרכזי באפליקצייה, הוא כולל את כל התמרורים לתיאוריה בישראל (מעודכן אוקטובר 2020)
        מדף הבית, לחצו על קטלוג התמרורים, מתוך רשימה של 281 תמרורים, בחרו את התמרור שברצונכם לשנן ולחצו עליו.
        בלחיצה על התמרור ייפתח דף ועליו כל הפרטים על התמרור, קבוצתו, פירושו, משמעותו ומתי הוא חל (כוחו יפה).
    </string>
    <string name="help_test_title">בוחן</string>
    <string name="help_test">
        החלק השני הכי חשוב באפליקצייה הוא הבוחן. הוא ייאפשר לכם לדעת עד כמה אתם מוכנים. מדף הבית, לחצו על כפתור הבוחן.
        הבוחן כולל עשר שאלות, בכל שאלה יופיע לכם תמרור אקראי ואתם תצטרכו לבחור את פירושו הנכון (יש רק תשובה אחת נכונה).
        בסוף הבוחן יופיע לכם כפתור אשר ייעצור את השעון ויגיד לכם כמה קיבלתם. משם תוכלו לחזור לדף הבית.
    </string>
    <string name="help_history_title">היסטוריית בחנים</string>
    <string name="help_history">
        על מנת לדעת האם אתם מתקדמים, חשוב מאוד לדעת בדיוק כמה קיבלתם בכל מבחן, בשביל זה קיים החלק הזה.
        מדף הבית, לחצו על כפתור ההיסטורייה, הוא ייפתח לכם דף חדש ובו כל הנתונים שהשגתם עד כה.
        מעל הטבלה יופיע גרף אשר יציג את הציונים שהשגתם לאורך הזמן והאם השתפרתם.
        לחצו לחיצה ארוכה על כל אחד מהרשומות על מנת למחוק את תיעוד המבחן הזה.
    </string>
    <string name="help_records_title">שיאים</string>
    <string name="help_records">
        על מנת לתת לכם מוטיבצייה אתם גם צריכים לשבור שיאים. החלק של השיאים ייאפשר לכם להתחרות עם עצמכם עד שתהיו הכי טובים שאפשר.
        מדף הבית, לחצו על כפתור השיאים. ייפתח לכם דף חדש המציג את עשרת הציונים הטובים ביותר (קודם לפי הציון ואחר כך לפי הזמן).
    </string>
    <string name="help_goodluck_title">בהצלחה</string>
    <string name="help_goodluck">
        מאות אנשים עוברים בכל שנה את מבחני התיאוריה, אין צורך להילחץ. אנחנו כאן כדי לתמוך בכם. אנחנו סומכים עליכם ומאחלים לכם המון בהצלחה.
        צאו לדרך!
    </string>
</resources>
