<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HistoryActivity">

    <TableLayout
        android:id="@+id/testHistoryContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="*"
        android:layout_marginVertical="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:id="@+id/testHistoryLabelContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/userTestHistoryLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@id/userTestHistory"
                android:text="@string/history_tests_user_label"
                android:textDirection="rtl"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/timeTestHistoryLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@id/timeTestHistory"
                android:text="@string/history_tests_time_label"
                android:textDirection="rtl"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/dateTestHistoryLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@id/dateTestHistory"
                android:text="@string/history_tests_date_label"
                android:textDirection="rtl"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/gradeTestHistoryLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@id/gradeTestHistory"
                android:text="@string/history_tests_grade_label"
                android:textDirection="rtl"
                android:textSize="18sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:id="@+id/testHistoryTextContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/userTestHistory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textDirection="rtl"
                android:layout_weight="1"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/timeTestHistory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textDirection="rtl"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/dateTestHistory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textDirection="rtl"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/gradeTestHistory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textDirection="rtl"
                android:textSize="18sp" />
        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>