<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RecordsActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="*"
        android:layout_marginVertical="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:id="@+id/testRecordsLabelContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/idTestRecordsLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@id/userTestRecords"
                android:textDirection="rtl"
                android:layout_marginStart="4dp"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/userTestRecordsLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@id/userTestRecords"
                android:text="@string/history_tests_user_label"
                android:textDirection="rtl"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/timeTestRecordsLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@id/timeTestRecords"
                android:text="@string/history_tests_time_label"
                android:textDirection="rtl"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/dateTestRecordsLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@id/dateTestRecords"
                android:text="@string/history_tests_date_label"
                android:textDirection="rtl"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/gradeTestRecordsLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@id/gradeTestRecords"
                android:text="@string/history_tests_grade_label"
                android:textDirection="rtl"
                android:textSize="18sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:id="@+id/testRecordsTextContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/idTestRecords"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textDirection="rtl"
                android:layout_marginStart="8dp"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/userTestRecords"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textDirection="rtl"
                android:layout_weight="1"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/timeTestRecords"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textDirection="rtl"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/dateTestRecords"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textDirection="rtl"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/gradeTestRecords"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textDirection="rtl"
                android:textSize="18sp" />
        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>