<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textDirection="rtl"
    tools:context=".SignsCatalogActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/dropdownCategorySelectCatalogLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/dropdownCategorySelectCatalog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:spinnerMode="dropdown"
                android:textDirection="rtl" />

            <ImageView
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:layout_marginHorizontal="10dp"
                android:contentDescription="@string/dropdown_image_down_arrow"
                android:src="@drawable/down_arrow" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginBottom="10dp"
            android:layoutDirection="rtl"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/searchSignFilterTextCatalog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/search_sign_filter_text_catalog_hint"
                android:inputType="text"
                android:layoutDirection="rtl"
                android:textDirection="rtl" />

        </LinearLayout>


        <GridView
            android:id="@+id/gridSigns"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:numColumns="3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/emptyElementSignsCatalog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/empty_element_signs_catalog_text"
            android:textColor="#525252"
            android:textSize="24sp"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>